# lightningscanner-rs

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: scan_1gb.rs
src/: aligned_bytes.rs  lib.rs  pattern.rs
src/backends/: avx2.rs  mod.rs  scalar.rs  sse42.rs
tests/: big_pattern.rs  similar_pattern.rs  small_pattern.rs  string_search.rs
